# crowdSimulation

assets/chicken/: Chicken_body_mat.material  chicken_body.mesh  chicken_body_LOD_1.mesh  chicken_body_LOD_2.mesh  chicken_body_LOD_3.mesh
assets/environment/: sand.material
src/: CMakeLists.txt  TimerManager.h  chicken.cpp  chicken.h  defaults.h  main.cpp  player.cpp  player.h
